trying to check forms. Add names

--- a/forms.html
+++ b/forms.html
@@ -16,23 +16,23 @@
 		<center>
 			<fieldset>
 			<legend>Register:</legend>
-				<form id="input_form">
+				<form id="input_form" onSubmit="submitForm()">
 				<div class="alignLeft">
 					<br>First name:<br>
-					<input type="text"></input>
+					<input type="text" name="first_name"></input>
 					<br>Last name:<br>
-					<input type="text"></input>
+					<input type="text" name="last_name"></input>
 					<br>Email:<br>
-					<input type="text"></input>
+					<input type="text" name="email"></input>
 					<br>Gender:<br>
-					<input type="text"></input>
+					<input type="text" name="gender"></input>
 					<br>Age:<br>
-					<input type="text"></input>
+					<input type="text" name="age"></input>
 				</div>
 					<p>
 					<input type="reset"></input>
 					<p>
-					<input type="submit" ></input>
+					<input type="submit"></input>
 				</form>
 			</fieldset>
 			<br>
