--- a/forms.html
+++ b/forms.html
@@ -42,7 +42,7 @@
 			
 			<fieldset>
 			<legend>Validate:</legend>
-				<form name="validation_form" action="" enctype="text/plain">
+				<form name="validation_form" onSubmit="sendEmail(this)" enctype="text/plain">
 					<textarea name="results" cols="18" rows="3"></textarea>
 					<p>
 					<input type="submit" name="mail"></input>
