added required fields

--- a/forms.html
+++ b/forms.html
@@ -30,6 +30,37 @@
 					<input type="text" name="gender"></input>
 					<br>Age:<br>
 					<input type="text" name="age"></input>
+					<br>
+					<input type="radio" name="where" value="nowhere">where</input>
+					<br>
+					<input type="radio" name="where">where</input>
+					<br>
+					<input type="radio" name="where" value="nowhere">where</input>
+					<br>
+					<input type="radio" name="where">where</input>
+					<br>
+					<input type="radio" name="where">where</input>
+					<br>
+					<input type="checkbox" name="age" value="nowhere">age</input>
+					<br>
+					<input type="checkbox" name="age" value="nowhere">age</input>
+					<br>
+					<input type="checkbox" name="age">age</input>
+					<br>
+					<input type="checkbox" name="age">age</input>
+					<br>
+					<input type="checkbox" name="age">age</input>
+					<br>
+					<textarea name="interest"></textarea>
+					<br>
+					<textarea name="bio"></textarea>
+					<br>
+					<textarea name="skills"></textarea>
+					<br>
+					<textarea name="about"></textarea>
+					<br>
+					<textarea name="comment"></textarea>
+					<br>
 				</div>
 					<p>
 					<input type="reset"></input>
