--- a/forms.html
+++ b/forms.html
@@ -20,65 +20,72 @@
 			<legend>Register:</legend>
 				<form name="input_form" id="input_form">
 				<div class="alignLeft">
-					<br>First name:<br>
-					<input type="text" name="first_name"></input>
-					<br>Last name:<br>
-					<input type="text" name="last_name"></input>
-					<br>Email:<br>
-					<input type="text" name="email_adress"></input>
-					<br>Gender:<br>
-					<input type="text" name="gender"></input>
-					<br>Age:<br>
-					<input type="text" name="age"></input>
-					<br>
-					<input type="radio" name="where" value="nowhere">where</input>
-					<br>
-					<input type="radio" name="where">where</input>
-					<br>
-					<input type="radio" name="where" value="nowhere">where</input>
-					<br>
-					<input type="radio" name="where">where</input>
-					<br>
-					<input type="radio" name="where">where</input>
-					<br>
-					<input type="checkbox" name="age" value="nowhere">age</input>
-					<br>
-					<input type="checkbox" name="age" value="nowhere">age</input>
-					<br>
-					<input type="checkbox" name="age">age</input>
-					<br>
-					<input type="checkbox" name="age">age</input>
-					<br>
-					<input type="checkbox" name="age">age</input>
-					<br>
-					<textarea name="interest"></textarea>
-					<br>
-					<textarea name="bio"></textarea>
-					<br>
-					<textarea name="skills"></textarea>
-					<br>
-					<textarea name="about"></textarea>
-					<br>
-					<textarea name="comment"></textarea>
-					<br>
-				</div>
+				
+				<table>
+					<tr>
+						<td>First name:<br><input type="text" name="first_name"></input></td>
+						<td>Last name:<br><input type="text" name="last_name"></input></td>
+					</tr>
+					<tr>
+						<td>Email:<br><input type="text" name="email_adress"></input></td>
+						<td>Gender:<br><input type="text" name="gender"></input></td>
+					</tr>
+					<tr>
+						<td>Email:<br><input type="text" name="email_adress"></input></td>
+						<td>Gender:<br><input type="text" name="gender"></input></td>
+					</tr>
+					<tr>
+						<td>Age:<br><input type="text" name="age"></input></td>
+						<td>Gender:<br><input type="radio" name="gender">M</input>
+								<input type="radio" name="gender">F</input></td>
+					</tr>
+					<tr>
+						<td>where:<input type="radio" name="where"></input>
+						where:<input type="radio" name="where"></input>
+						<br>
+						where:<input type="radio" name="where"></input>
+						where:<input type="radio" name="where"></input></td>
+						
+						<td>where:<input type="checkbox" name="where"></input>
+						where:<input type="checkbox" name="where"></input>
+						<br>
+						where:<input type="checkbox" name="where"></input>
+						where:<input type="checkbox" name="where"></input>
+						<br>
+						where:<input type="checkbox" name="where"></input></td>
+					</tr>
+					<tr>
+						<td><textarea name="about"></textarea></td>
+						<td><textarea name="about"></textarea></td>
+					</tr>
+					<tr>
+						<td><textarea name="about"></textarea></td>
+						<td><textarea name="about"></textarea></td>
+					</tr>
+				</table>
+				<center>
+				<textarea name="about" style="width:96%; margin:5px;"></textarea>
 					<p>
 					<input type="reset"></input>
-					<p>
 					<button type="button" onClick="submitForm()" form="input_form">submit</button>
 				</form>
 				<p>
+				</center>
 			</fieldset>
 			<br>
 			
 			<fieldset>
 			<legend>Validate:</legend>
 				<form name="validation_form" onSubmit="sendEmail(this)" enctype="text/plain">
-					<textarea name="results" cols="18" rows="3"></textarea>
+					<textarea name="results" cols="45" rows="5"></textarea>
 					<p>
 					<input type="submit" name="mail"></input>
 				</form>
 			</fieldset>
+			<p><p>
+			<br><p>
+			<br>
+			<br>
 		</center>
 	</div>
 </div>
