--- a/forms.html
+++ b/forms.html
@@ -73,7 +73,7 @@
 				<textarea name="comment" id="comment" style="width:96%; margin-left:5px; margin-right:5px; border-radius: 10px;"></textarea>
 					<p>
 					<input type="reset"></input>
-					<button type="button" onClick="submitForm()" form="input_form">submit</button>
+					<button type="button" onClick="rawSubmit()" form="input_form">submit</button>
 				</form>
 				<p>
 				</center>
